--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,12 @@ node_modules/
 
 # dotenv environment variables file
 .env
+.env.local
+.env.development
+.env.production
+
+# Firebase service account
+functions/service-account.json
 
 # dataconnect generated files
 .dataconnect
