--- a/functions/package.json
+++ b/functions/package.json
@@ -9,13 +9,15 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "18"
+    "node": "20"
   },
   "main": "index.js",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.5",
+    "axios": "^1.6.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "firebase-admin": "^11.8.0",
+    "firebase-admin": "^13.2.0",
     "firebase-functions": "^6.3.2",
     "stripe": "^13.6.0"
   },
