--- a/functions/.gitignore
+++ b/functions/.gitignore
@@ -1,2 +1,21 @@
 node_modules/
 .runtimeconfig.json
+
+# Environment variables
+.env
+.env.local
+.env.development
+.env.production
+sendgrid.env
+
+# Service account files
+service-account*.json
+*-service-account*.json
+
+# Temporary or debugging files
+**/temp/
+**/tmp/
+**/*.backup.js
+**/*.backup.json
+debug*.log
+**/*.bak
