--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:staging": "REACT_APP_ENVIRONMENT=staging react-scripts build",
+    "build:development": "REACT_APP_ENVIRONMENT=development react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
