lp, cart and checkout

--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@firebase/analytics": "^0.10.12",
+    "@firebase/app": "^0.11.4",
+    "@firebase/auth": "^1.10.0",
+    "@firebase/component": "^0.6.13",
+    "@firebase/firestore": "^4.7.10",
+    "@firebase/functions": "^0.12.3",
+    "@firebase/storage": "^0.13.7",
+    "@firebase/util": "^1.11.0",
     "@sendgrid/mail": "^8.1.5",
     "@stripe/react-stripe-js": "^2.9.0",
     "@stripe/stripe-js": "^1.54.2",
