--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "firebase": "^10.7.0",
     "is-regexp": "^3.1.0",
     "lucide-react": "^0.488.0",
+    "prompts": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "shebang-regex": "^4.0.0",
     "stringify-object": "^5.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "workbox-webpack-plugin": "^7.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
