Fix guest checkout functionality in Firebase Functions
- Update functions/index.js to handle guest cart data directly in create-payment-intent
- Improve confirm-payment endpoint to handle guest checkout orders
- Add guest checkout documentation and test script
- Fix boolean handling for isGuestCheckout parameter

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase": "^10.7.0",
     "is-regexp": "^3.1.0",
     "lucide-react": "^0.488.0",
+    "node-fetch": "^2.7.0",
     "prompts": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
