Fix Firebase Functions v2 compatibility issue and add environment setup guide
- Remove direct usage of functions.config() which is deprecated in Firebase Functions v2
- Update firebase.json with non-sensitive app URL configuration
- Create comprehensive ENVIRONMENT_SETUP.md guide for setting up environment variables
- Add functions/.env to .gitignore for security
- Document three methods for setting up environment variables in production

--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,4 @@ Screenshot*.png
 # Keep these useful development files
 !/src/components/TestOrderButton.js
 !/src/utils/mockData.js
+functions/.env
