Update navigation labels: change 'Purchases' to 'Buying' and 'My Orders' to 'Purchases' in header menus

--- a/.gitignore
+++ b/.gitignore
@@ -90,6 +90,14 @@ sendgrid.env
 sendgrid.env
 .vercel
 
+# transactional email templates
+transactional-email-templates/
+**/transactional-email-templates/
+
+# testing sheets
+Testing Sheets/
+**/Testing Sheets/
+
 # temporary files and test scripts
 fix-*.js
 test-*.js
